Standardised emoji picker

--- a/views/partials/newreplyform.handlebars
+++ b/views/partials/newreplyform.handlebars
@@ -18,7 +18,7 @@
     <div class="leftSideControls">
       <button type="button" class="button grey-button" id="postLinkButton"><i class="fas fa-link"></i></button>
       <button type="button" class="button grey-button" id="postImageButton"><i class="fas fa-image"></i></button>
-      <button type="button" class="button grey-button replyEmojiWindowButton"><i class="far fa-smile"></i></button>
+      <button type="button" class="button grey-button show-emoji-picker"><i class="far fa-smile"></i></button>
     </div>
     <div class="rightSideControls">
       <button type="submit" class="button create-comment">Reply <i class="fas fa-chevron-right"></i></button>
