--- a/views/partials/newpostform.handlebars
+++ b/views/partials/newpostform.handlebars
@@ -30,7 +30,7 @@
     <div class="rightSideControls">
       <button type="button" class="button grey-button" id="postLinkButton"><i class="fas fa-link"></i></button>
       <button type="button" class="button grey-button" id="postImageButton"><i class="fas fa-image"></i></button>
-      <button type="button" class="button grey-button" id="emojiWindowButton"><i class="far fa-smile"></i></button>
+      <button type="button" class="button grey-button show-emoji-picker"><i class="far fa-smile"></i></button>
       <button type="button" class="button grey-button" style="margin-right: 1rem;" id="postContentWarningsButton"><i class="fas fa-info-circle"></i></button>
       <button type="submit" class="button" id="postSubmit" data-loading-text="<i class='fas fa-spinner fa-spin'></i> Uploading">Send <i class="fas fa-chevron-right"></i></button>
     </div>
