--- a/views/partials/posteditormodal.handlebars
+++ b/views/partials/posteditormodal.handlebars
@@ -16,7 +16,7 @@
               <div class="editable-post-content editable-text" id="editPostContent">
                 {{{content}}}
               </div>
-              <div class="form-row mt-2 p-1 emoji-picker" id="edit-post-emoji-picker" style="display:none">
+              <div class="form-row mt-2 p-1 emoji-picker" style="display:none">
                 {{> emojilist }}
               </div>
             <div class="link-form-cont"> {{! this is only here bc jquery applies display:block when it slides something down, which would break the below div if it slid down that}}
@@ -40,7 +40,7 @@
               <div class="rightSideControls">
                 <button type="button" class="button grey-button" id="editPostLinkButton"><i class="fas fa-link"></i></button>
                 <button type="button" class="button grey-button" id="editPostImageButton"><i class="fas fa-image"></i></button>
-                <button type="button" class="button grey-button" id="editEmojiWindowButton"><i class="far fa-smile"></i></button>
+                <button type="button" class="button grey-button show-emoji-picker"><i class="far fa-smile"></i></button>
                 <button type="button" class="button grey-button" id="editPostContentWarningsButton"><i class="fas fa-info-circle"></i></button>
               </div>
             </div>
