--- a/views/partials/newpostform.handlebars
+++ b/views/partials/newpostform.handlebars
@@ -21,9 +21,9 @@
     <div class="leftSideControls">
       <div class="switch-field" id="visibilityControls">
         <input type="radio" id="postPrivacy-public" name="postPrivacy" value="public" {{#eq loggedInUserData.settings.newPostPrivacy "public"}}checked{{/eq}} />
-        <label for="postPrivacy-public"><i class='fas fa-eye'></i></label>
+        <label for="postPrivacy-public" id="publicPrivacyLabel"><i class='fas fa-eye'></i></label>
         <input type="radio" id="postPrivacy-private" name="postPrivacy" value="private" {{#eq loggedInUserData.settings.newPostPrivacy "private"}}checked{{/eq}}/>
-        <label for="postPrivacy-private"><i class='fas fa-eye-slash'></i></label>
+        <label for="postPrivacy-private" id="privatePrivacyLabel"><i class='fas fa-eye-slash'></i></label>
       </div>
     </div>
     {{/unless}}
