--- a/views/partials/scriptPartials/newPostOrCommentScripts.handlebars
+++ b/views/partials/scriptPartials/newPostOrCommentScripts.handlebars
@@ -88,11 +88,17 @@ $(function(){
   $('body').on('click', '.edit-post', function() {
       var postContainer = $(this).closest('.post');
       var postID = postContainer.attr("data-post-id");
-      $.post("/createposteditor/"+postID, function(data) {
-          $('body').append(data.editor);
-          var editModal = $('#editPostModal');
-          attachQuill(editModal.find('#editPostContent')[0]);
-          $('#editPostModal').modal();
+      $.post("/createposteditor/" + postID, function(data) {
+        $('body').append(data.editor);
+        var editModal = $('#editPostModal');
+        attachQuill(editModal.find('#editPostContent')[0]);
+        var newEditor = editModal.find('.ql-editor');
+        newEditor.append(data.content);
+        newEditor.find('.image-move').each(function(i, e) { e.addEventListener('touchstart', touchStartOnHandle, { passive: false }) });
+        newEditor.find('.image-move').on('mousedown', mousedownOnHandle);
+        newEditor.find('.image-clear').click(clearEmbed);
+        createImageGroups(newEditor);
+        $('#editPostModal').modal();
       })
   })
 
