--- a/views/partials/scriptPartials/textEditorScripts.handlebars
+++ b/views/partials/scriptPartials/textEditorScripts.handlebars
@@ -1,27 +1,9 @@
 <script type="text/custom-template" id="new-post-link-preview-contents">
-    <img class="link-preview-image" src="/images/spinner-stolen.gif" />
-    <div class="link-preview-text-container" style="width:100%;">
-        <span class="link-preview-title">...loading...</span>
-        <span class="link-preview-description">...loading...</span>
-        <span class="link-preview-domain">...loading...</span>
-    </div>
-    <div class="image-preview-controls">
-        <div class="image-control image-clear" title="Clear"><i class="fas fa-times"></i></div>
-        <div class="image-control image-move" title="Move" ondragstart="return false;" ondrop="return false;"><i class="fas fa-arrows-alt"></i></div>
-    </div>
+{{> linkPreviewPreview}}
 </script>
 
 <script type="text/custom-template" id="new-post-image-preview-contents">
-    <div class="image-preview">
-        <div class="fader" style="position: absolute;top: 0;display: flex;flex-direction:column;color:white;background-color:#00000088;display:flex;align-items:center;justify-content:center;height:100%;width:100%;flex-scrollDirection:column;">
-            <div id="percentage" style="padding:5px 5px;">0%</div><progress max="100" value="0"></progress>
-        </div>
-    </div>
-    <textarea class="form-control mb-3" name="postImageDescription" id="postImageDescription" placeholder="Describe this image for people using screen readers."></textarea>
-    <div class="image-preview-controls">
-        <div class="image-control image-clear" title="Clear image"><i class="fas fa-times"></i></div>
-        <div class="image-control image-move" title="Move image" ondragstart="return false;" ondrop="return false;"><i class="fas fa-arrows-alt"></i></div>
-    </div>
+{{> imagePreview}}
 </script>
 
 <script>
@@ -657,7 +639,7 @@
         floatingVersion.css("left", spacer.offset().left + "px");
         floatingVersion.css("top", getTop(spacer) + "px");
 
-        spacer.closest('.ql-container').append(floatingVersion);
+        $('body').append(floatingVersion);
 
         //these can be put in the css file under .onthemove if that's preferred. I guess I would rather have them here
         floatingVersion.css("position", "fixed");
@@ -669,7 +651,7 @@
         spacer.css("border", "dashed")
         spacer.empty();
 
-        floatingVersion[0].scrollPrompterId = setInterval(function() { scrollPrompter(floatingVersion) }, 50);
+        floatingVersion[0].scrollPrompterId = setInterval(function() { scrollPrompter(floatingVersion, spacer.closest('.ql-editor')) }, 50);
 
         lastWindowPos = window.scrollY;
         $(window).on('scroll', function(e) {
@@ -686,18 +668,18 @@
 
     //auto-scrolls when the floating element is less than 100px away from the top or bottom and the top or bottom of the editor is offscreen.
     //called through setInterval, which is started in prepareEmbedForMoving, and then canceled in endMovement
-    function scrollPrompter(floatingEmbed) {
+    function scrollPrompter(floatingEmbed, editor) {
         var t = floatingEmbed.offset().top;
         var h = floatingEmbed.outerHeight();
         var b = t + h;
-        var pt = floatingEmbed.parent().offset().top;
-        var pb = pt + floatingEmbed.parent().outerHeight();
+        var et = editor.offset().top;
+        var eb = et + editor.outerHeight();
         var w = $(window);
         var wst = w.scrollTop();
         var wh = w.height();
-        if (t < wst + 100 && pt < wst + 50) {
+        if (t < wst + 100 && et < wst + 50) {
             w.scrollTop(wst - 10);
-        } else if (b > wh - 100 && pb > (wst + wh)) {
+        } else if (b > wh - 100 && eb > (wst + wh)) {
             w.scrollTop(wst + 10);
         }
     }
