--- a/views/partials/scriptPartials/textEditorScripts.handlebars
+++ b/views/partials/scriptPartials/textEditorScripts.handlebars
@@ -674,13 +674,22 @@
         var b = t + h;
         var et = editor.offset().top;
         var eb = et + editor.outerHeight();
+        var modal = editor.closest('.modal');
         var w = $(window);
         var wst = w.scrollTop();
         var wh = w.height();
         if (t < wst + 100 && et < wst + 50) {
-            w.scrollTop(wst - 10);
+            if(modal.length){
+                modal.scrollTop(modal.scrollTop()-10);
+            }else{
+                w.scrollTop(wst - 10);
+            }
         } else if (b > wh - 100 && eb > (wst + wh)) {
-            w.scrollTop(wst + 10);
+            if(modal.length){
+                modal.scrollTop(modal.scrollTop()+10);
+            }else{
+                w.scrollTop(wst + 10);
+            }
         }
     }
 
