--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -78,7 +78,7 @@
         {{else}}
             <div class="navbar-group" id="navbarLeftGroup">
                 <li class="nav-item">
-                  <a class="nav-link" href="/"><img src="/icons/bee.svg" id="sweetLogo" alt="sweet logo"/> <span class="nav-link-text not-hidden navbar-site-title">sweet</span></a>
+                  <a class="nav-link" href="/"><img src="/icons/bee-color.svg" id="sweetLogo" alt="sweet logo"/> <span class="nav-link-text not-hidden navbar-site-title">sweet</span></a>
                 </li>
             </div>
           <div class="navbar-group" id="navbarRightGroup">
@@ -93,3 +93,9 @@
       </ul>
     </nav>
 </div>
+
+<!-- <div class='color-test lightest-grey'></div>
+<div class='color-test light-grey'></div>
+<div class='color-test medium-grey'></div>
+<div class='color-test dark-grey'></div>
+<div class='color-test darkest-grey'></div> -->
