--- a/scss/_posts-comments.scss
+++ b/scss/_posts-comments.scss
@@ -567,7 +567,7 @@ article.comment>header .author-username {
     max-height: 100%;
     max-width: 140px;
     width: 140px !important;
-    object-fit: cover;
+    object-fit: contain;
     min-width: 140px;
 }
 
