--- a/views/partials/posteditormodal.handlebars
+++ b/views/partials/posteditormodal.handlebars
@@ -19,7 +19,7 @@
               </div>
             <div class="link-form-cont"> {{! this is only here bc jquery applies display:block when it slides something down, which would break the below div if it slid down that}}
               <div class="my-2 linkPreviewAddingForm">
-                <input type="text" class="form-control" name="editLinkPreviewUrlEntry" id="editLinkPreviewUrlEntry" placeholder="endless.horse" />
+                <input type="text" class="form-control" name="linkPreviewUrlEntry" id="linkPreviewUrlEntry" placeholder="endless.horse" />
                 <button class="button grey-button link-add" style="margin-left: 0.5rem;"><i class="fas fa-arrow-up"></i></button>
               </div>
             </div>
