--- a/views/partials/scriptPartials/linkPreviewPreview.handlebars
+++ b/views/partials/scriptPartials/linkPreviewPreview.handlebars
@@ -1,7 +1,15 @@
     {{#if editing}}
     <a class="link-preview-container" linkUrl="{{linkUrl}}" contenteditable="false">
     {{/if}}
-    <img class="link-preview-image" {{#if editing}}src="{{image}}"{{else}}src="/images/spinner-stolen.gif"{{/if}} />
+    {{#if image}}
+    <img class="link-preview-image" src="{{image}}" />
+    {{else}}
+    {{#if editing}}
+    <div class="link-preview-image" style="font-size:50px;text-align:center;"><i class="fas fa-link"></i></div>
+    {{else}}
+    <div class="link-preview-image" style="font-size:50px;text-align:center;"><i class="fas fa-spinner fa-spin"></i></div>
+    {{/if}}
+    {{/if}}
     <div class="link-preview-text-container" style="width:100%;">
         <span class="link-preview-title">{{#if editing}}{{title}}{{else}}...loading...{{/if}}</span>
         <span class="link-preview-description">{{#if editing}}{{description}}{{else}}...loading...{{/if}}</span>
