chasing misc. todo:s

--- a/scss/_miscellanea.scss
+++ b/scss/_miscellanea.scss
@@ -199,7 +199,7 @@
 }
 
 
-/*todo: is this used*/
+/*exclusively used to complain about attempts to hide content warning fields with stuff in them*/
 .bounce {
     animation-name: bounce;
     animation-timing-function: linear;
