--- a/views/partials/newpostform.handlebars
+++ b/views/partials/newpostform.handlebars
@@ -3,7 +3,7 @@
     <div class="form-row" style="margin-bottom:0.5rem" id="postContentWarningsContainer">
       <input type="text" class="form-control" name="postContentWarnings" id="postContentWarnings" placeholder="Warn others about your post's content." {{#if sessionFlash.errorContentWarnings }}value="{{sessionFlash.errorContentWarnings}}" {{/if}} />
     </div>
-    <div id="editor" class="editable-post-content editable-text" id="postContent">
+    <div id="editor" class="editable-post-content editable-text">
       <p><br></p>
     </div>
     <div class="form-row mt-2 p-1 emoji-picker" id="new-post-emoji-picker" style="display:none">
