--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -52,9 +52,9 @@
 }
 
 #navbarSearchField {
-    color: $navigation-text;
-    background: $lightest-grey;
-    border-color: $medium-grey;
+    // color: $navigation-text;
+    // background: $lightest-grey;
+    // border-color: $medium-grey;
     width: 180px;
 }
 
