--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -66,6 +66,7 @@
                 <!-- <a id="darkModeToggle" class="dropdown-item" href="#"><i class="fas fa-fw fa-moon"></i> dark mode</a> -->
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="/support"><i class="fas fa-fw fa-question-circle"></i> support</a>
+                <a class="dropdown-item switch-style" data-style="light" href="#"><i class="fas fa-fw fa-moon"></i> cyberpunk mode</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="/logout"><i class="fas fa-fw fa-sign-out-alt"></i> log out</a>
               </div>
