--- a/scss/_dark-mode-colors.scss
+++ b/scss/_dark-mode-colors.scss
@@ -1,13 +1,15 @@
-$text: #fff; // Text for dark mode.
+$text: #ccc; // Text for dark mode.
 
-$background-white: #fff;
+$background-white: #fbfbfb;
 $background-grey: #f9f9fa; // Page background
 
-$lightest-grey: #3d3e44; // Form input backgrounds, comment content box backgrounds
-$light-grey: #aaa; // Subtle dividers, comment content box borders
-$medium-grey: #333333; // Post borders
-$dark-grey: #5e5d5d;
-$darkest-grey: #666; // Grey-colored text
+$medium-grey: #3f3f46;
+$lightest-grey: darken($medium-grey, 20%);
+$light-grey: darken($medium-grey, 15%);
+$dark-grey: lighten($medium-grey, 10%);
+$darkest-grey: lighten($medium-grey, 25%);
+
+$background-grey: #1a1a1c; // Page background
 
 $light-blue: #339fdb; // Links
 
@@ -15,7 +17,7 @@ $light-yellow: #fcfaea; // Recent comment flash
 
 $bright-green: #46e146; // Recently active user markers
 
-$sweet-red: #ce1717; // The Best Red (TM). Hovers, buttons, etc.
+$sweet-red: darken(desaturate(#ce1717, 20%), 10%); // The Best Red (TM). Hovers, buttons, etc.
 $dark-red: darken($sweet-red, 10%);
 $lightest-pink: #fffafc;
 $light-pink: lighten($sweet-red, 40%);
@@ -23,21 +25,44 @@ $darker-pink: lighten($sweet-red, 30%); // 'Recently commented' notifications
 $dark-pink: lighten($sweet-red, 20%);
 
 $highlight: darken($sweet-red, 40%);
-$placeholder: $darkest-grey;
-$editor-background: $darkest-grey;
+$placeholder: $dark-grey;
+$editor-background: $light-grey;
 
-$navbar-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-$dropdown-shadow: 0 3px 8px rgba(0, 0, 0, .25);
-$post-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2);
-$button-shadow: 2px 2px 3px rgba(0,0,0,0.15);
-$button-shadow-hover: 1px 1px 1px rgba(0,0,0,0.2);
+$navbar-shadow: 5px 5px 10px rgba(0,0,0,0.8);
+$dropdown-shadow: 0 3px 8px rgba(0, 0, 0,8);
+$post-shadow: 0px 0px 6px rgba(0, 0, 0, 0.8);
+$button-shadow: 2px 2px 3px rgba(0,0,0,0.8);
+$button-shadow-hover: 1px 1px 1px rgba(0,0,0,0.8);
 
-$navigation-background: #222222;
-$element-background: #0f0f0f;
-$page-background: #212224;
-$aside-background: #0f0f0f;
+$navigation-background: darken($background-grey, 5%);
+$element-background: darken($background-grey, 2%);
+// $page-background: #212224;
+$aside-background: $element-background;
 
 $navigation-border: $dark-pink;
-$navigation-text: rgba(255,255,255, 0.8);
+$navigation-text: rgba($text, 0.8);
 $navigation-active-text: $dark-pink;
 $navigation-hover-text: $sweet-red;
+
+.color-test {
+    margin-top: 80px;
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+    &.medium-grey  {
+        background-color: $medium-grey;
+    }
+    &.lightest-grey {
+        background-color: $lightest-grey
+    }
+    &.light-grey {
+        background-color: $light-grey
+
+    }
+    &.dark-grey {
+        background-color: $dark-grey
+    }
+    &.darkest-grey {
+        background-color: $darkest-grey
+    }
+}
