--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,7 +34,7 @@
   <!-- DANGEROUS EXPERIMENTAL NEW SCSS STYLESHEET -->
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/navbar-icons.css">
-  <link id="darkModeStylesheet" rel="stylesheet" href="">
+  <link id="dark-mode-stylesheet" rel="stylesheet" href="">
 
   <script defer src="/fonts/fontawesome/js/all.min.js"></script>
 
